--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ clap = { version = "4.5", features = ["derive"] }
 [[bin]]
 name = "rg-edit"
 path = "src/main.rs"
+
+[build-dependencies]
+clap_mangen = "0.2"
+clap = { version = "4.5", features = ["derive"] }
