--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ keywords = ["ripgrep", "rg", "gptel", "gptel-rewrite", "llm"]
 [dependencies]
 tempfile = "3.23"
 clap = { version = "4.5", features = ["derive"] }
+anyhow = "1.0"
 
 [[bin]]
 name = "rg-edit"
