Copr: set pakage version to what is in Cargo.toml automatically
Signed-off-by: Vitaly Kuznetsov <vkuznets@redhat.com>

--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -1,6 +1,7 @@
-spec            ?= .distro/ripgrep-edit.spec
+spec_template   ?= .distro/ripgrep-edit.spec.template
+spec		:= dist/ripgrep-edit.spec
 
-PKG_VERSION	:= $(shell rpmspec --query --queryformat '%{VERSION}' $(spec))
+PKG_VERSION	:= $(shell grep '^version = ' Cargo.toml | sed 's,.*\"\(.*\)\",\1,')
 PKG_TARBALL	:= dist/ripgrep-edit-$(PKG_VERSION).tar.gz
 
 default:
@@ -15,6 +16,7 @@ dist tarball $(PKG_TARBALL):
 srpm: $(PKG_TARBALL)
 	rm -rf rpm
 	mkdir rpm
+	sed -e "s,@@RIPGREP-VERSION@@,$(PKG_VERSION)," $(spec_template) > $(spec)
 	rpmbuild -bs --define "_sourcedir dist" --define "_srcrpmdir $(outdir)" $(spec)
 
 clean:
