Package rg-edit.1 manpage as well
Cargo doesn't currently offer a standard way for installing manpages
and ripgrep-edit offers a custom build.rs solution. Pick the result
in the specfile so it's packaged in the RPM.

Signed-off-by: Vitaly Kuznetsov <vkuznets@redhat.com>

--- a/.distro/ripgrep-edit.spec.template
+++ b/.distro/ripgrep-edit.spec.template
@@ -38,6 +38,8 @@ Edit ripgrep search results across multiple files.}
 %cargo_install
 mkdir -p %{buildroot}%{_datarootdir}/%{name}
 cp -a emacs %{buildroot}%{_datarootdir}/%{name}
+mkdir -p %{buildroot}%{_mandir}/man1/
+cp -a target/rpm/build/%{name}-*/man/*.1 %{buildroot}%{_mandir}/man1/
 
 %if %{with check}
 %check
@@ -50,6 +52,7 @@ cp -a emacs %{buildroot}%{_datarootdir}/%{name}
 %doc README.md
 %{_bindir}/rg-edit
 %{_datarootdir}/%{name}
+%{_mandir}/man1/rg-edit.1*
 
 %changelog
 %autochangelog
