Improve GBNF grammar generation with dynamic control line selection
The GBNF grammar generation has been enhanced to better handle control
lines. Instead of multiline matching, the approach now uses
single-line matching with newline verification.

When --gbnf flag is enabled control lines are selected from extra
context (configurable with --gbnf-control-lines) using the
Damerau-Levenshtein algorithm to find the most distant line, ensuring
robust snippet boundaries.

When unique control lines aren't available within the control lines
extra context, the logic falls back to 1-line extra context in the
before-context and no extra context in the after-context. This is
because if this happens in before-context, the start control line is
emitted by the grammar anyway and it won't be editable. If it happens
in after-context, the grammar only awaits the separator to advance to
the next snippet.

Signed-off-by: Andrea Arcangeli <aarcange@redhat.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ keywords = ["ripgrep", "rg", "gptel", "gptel-rewrite", "llm"]
 tempfile = "3.23"
 clap = { version = "4.5", features = ["derive"] }
 anyhow = "1.0"
+textdistance = "1.1"
+either = "1.15"
 
 [[bin]]
 name = "rg-edit"
