Cleanup temporary files on signal
When the program receives an interrupt signal, it now properly removes
both the temporary files.

Signed-off-by: Andrea Arcangeli <aarcange@redhat.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ clap = { version = "4.5", features = ["derive"] }
 anyhow = "1.0"
 textdistance = "1.1"
 either = "1.15"
+ctrlc = { version = "3.5", features = ["termination"] }
 
 [[bin]]
 name = "rg-edit"
