--- a/.distro/ripgrep-edit.spec.template
+++ b/.distro/ripgrep-edit.spec.template
@@ -12,7 +12,7 @@ Summary:        Edit ripgrep search results across multiple files
 License:        GPL-3.0-or-later OR AGPL-3.0-or-later
 
 URL:            https://gitlab.com/aarcange/ripgrep-edit
-Source:         %name-%version.tar.gz
+Source:         https://gitlab.com/aarcange/ripgrep-edit/-/archive/%version/%name-%version.tar.gz
 
 BuildRequires:  cargo-rpm-macros >= 26 ripgrep
 Requires: ripgrep
